Criado através do Colaboratory

--- a/4-experiments/multilabel-opacity.ipynb
+++ b/4-experiments/multilabel-opacity.ipynb
@@ -82,7 +82,7 @@
         "warnings.filterwarnings(\"ignore\")"
       ],
       "id": "applicable-billion",
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -126,7 +126,7 @@
         "  return image"
       ],
       "id": "Ca8k892QZQ1y",
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -151,7 +151,7 @@
         "dataframe['image_path'] = '/content/drive/MyDrive/vinbigdata/train/' + dataframe.image_id + '.jpg'"
       ],
       "id": "regulation-costume",
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -161,13 +161,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fc42a65c-1682-440c-f915-e7ac66afaa21"
+        "outputId": "74bee23a-d49f-48e2-9c4a-c23725be890e"
       },
       "source": [
         "print('total de imagens disponíveis:', str(len(set(dataframe['image_path']))))"
       ],
       "id": "necessary-medication",
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,14 +185,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e8c5765e-da28-4f7e-9195-0bb9844a5d1c"
+        "outputId": "a1789918-0936-4b7f-90e2-e652f7ea7e53"
       },
       "source": [
         "# visualizando os casos disponíveis\n",
         "dataframe['class_name'].value_counts()"
       ],
       "id": "widespread-enclosure",
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -219,7 +219,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 5
         }
       ]
     },
@@ -236,7 +236,7 @@
         "dataframe = dataframe[dataframe.class_name != 'Consolidation']"
       ],
       "id": "informal-ottawa",
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -246,7 +246,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d93fbb26-0b11-41d0-89cf-a1e8a24dc4de"
+        "outputId": "d5796ef5-9ad4-42c7-876d-e8c775f0b5f5"
       },
       "source": [
         "# separando os casos rotulados como normais e anormais\n",
@@ -256,7 +256,7 @@
         "print('total de dados após a filtração:', str(len(set(normal_cases['image_path'])) + len(set(abnormal_cases['image_path']))))"
       ],
       "id": "plastic-master",
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -282,7 +282,7 @@
         "abnormal_data['target'] = 'abnormal'"
       ],
       "id": "secure-alignment",
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -292,14 +292,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0c1f98f8-4807-4af6-e675-0fc1c07e53ae"
+        "outputId": "718c6571-1a13-45ab-c43c-bea89f2fcbeb"
       },
       "source": [
         "print('quantidade de dados rotulados como normais:', len(normal_data))\n",
         "print('quantidade de dados rotulados como anormais:', len(abnormal_data))"
       ],
       "id": "sudden-platform",
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -321,7 +321,7 @@
         "normal, _ = train_test_split(normal_data, test_size = 0.69, random_state = 42)"
       ],
       "id": "prompt-embassy",
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -331,14 +331,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2be922e9-3d00-4f4c-a1b7-f62e7f021913"
+        "outputId": "5299df2d-262e-4345-ee9a-b19e96a79740"
       },
       "source": [
         "print('quantidade de dados rotulados como normais:', len(normal))\n",
         "print('quantidade de dados rotulados como anormais:', len(abnormal_data))"
       ],
       "id": "sitting-works",
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,7 +360,7 @@
         "full_data = pd.concat([normal, abnormal_data])"
       ],
       "id": "funny-document",
-      "execution_count": 14,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -370,13 +370,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "00eyZFrcgKh0",
-        "outputId": "2dd37a6f-09d6-4aa2-aa30-9fd9375b7c6b"
+        "outputId": "b55cf8fd-5f33-44d7-abd6-b738be10692c"
       },
       "source": [
         "full_data['class_name'].value_counts()"
       ],
       "id": "00eyZFrcgKh0",
-      "execution_count": 15,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -399,7 +399,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 13
         }
       ]
     },
@@ -418,7 +418,7 @@
         "full_data = pd.concat([opacity, others])"
       ],
       "id": "bMgFfvv6vuvI",
-      "execution_count": 22,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -431,7 +431,7 @@
         "full_data = full_data.sample(frac = 1, axis = 0, random_state = 42).reset_index(drop=True)"
       ],
       "id": "golden-reading",
-      "execution_count": 24,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -445,7 +445,7 @@
         "                                     test_size = 0.2, random_state = 42)"
       ],
       "id": "medium-brand",
-      "execution_count": 25,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -459,7 +459,7 @@
         "                                           test_size = 0.2, random_state = 42)"
       ],
       "id": "extraordinary-retrieval",
-      "execution_count": 26,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -469,7 +469,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d902c7cf-193f-45d6-d76e-4f9e306d1ec4"
+        "outputId": "b6a13f18-42f3-4f0e-c0c1-502a86c2ce0d"
       },
       "source": [
         "# visualizando a quantidade de dados\n",
@@ -481,7 +481,7 @@
         "print('quantidade de rótulos de validação:', len(validation_df['target']))"
       ],
       "id": "dependent-collins",
-      "execution_count": 27,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -504,14 +504,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e472349e-200b-448c-c922-6450b0a55c14"
+        "outputId": "f0db4d1b-c2c7-492d-fe1f-70a84d9b8510"
       },
       "source": [
         "# visualizando a quantidade de exemplos disponíveis nos dados de treinamento\n",
         "train_df['finding_labels'].value_counts()"
       ],
       "id": "BUGdPMp1MnFy",
-      "execution_count": 28,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -525,7 +525,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 28
+          "execution_count": 19
         }
       ]
     },
@@ -536,14 +536,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0f2bb08d-f5ca-4919-fdd9-4a5e87999645"
+        "outputId": "b5457d86-64af-46a7-e1e5-9e9592b834b6"
       },
       "source": [
         "# visualizando a quantidade de exemplos disponíveis nos dados de validação\n",
         "validation_df['finding_labels'].value_counts()"
       ],
       "id": "15lrj6xgM2by",
-      "execution_count": 29,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -557,7 +557,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 29
+          "execution_count": 20
         }
       ]
     },
@@ -568,14 +568,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9207f902-4d3f-4be3-cbcd-acb60907d34e"
+        "outputId": "22f7f6ab-0c69-4212-a929-5f57705e6060"
       },
       "source": [
         "# visualizando a quantidade de exemplos disponíveis nos dados de teste\n",
         "test_df['finding_labels'].value_counts()"
       ],
       "id": "Tmr4M8tgM630",
-      "execution_count": 30,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -589,7 +589,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 30
+          "execution_count": 21
         }
       ]
     },
@@ -600,7 +600,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4b3a8a0a-7d69-4114-fa80-2149ac56a194"
+        "outputId": "68db66b5-04a8-44de-8f8e-043b22f8181d"
       },
       "source": [
         "# normalizando as imagens de treinamento e aplicando aumento de dados\n",
@@ -617,8 +617,10 @@
         "                                                      shuffle = True,\n",
         "                                                      class_mode = 'categorical',\n",
         "                                                      target_size = (512, 512))\n",
+        "\n",
+        "valid_generator = ImageDataGenerator()\n",
         "# criando o gerador de imagens de validação \n",
-        "valid_generator = image_generator.flow_from_dataframe(\n",
+        "valid_generator = valid_generator.flow_from_dataframe(\n",
         "                                                      dataframe = validation_df,\n",
         "                                                      directory = '.', \n",
         "                                                      x_col = 'image_path',\n",
@@ -644,7 +646,7 @@
         "                                                  target_size = (512, 512))"
       ],
       "id": "requested-pakistan",
-      "execution_count": 31,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -664,14 +666,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XEybnwZ7xNYB",
-        "outputId": "0dc0da91-e8d0-420f-c0cb-305710550f52"
+        "outputId": "4a09ec6f-bdaa-40f1-e914-98a28a239594"
       },
       "source": [
         "# visualizando os atributos numéricos nos dados de treinamento\n",
         "train_generator.class_indices"
       ],
       "id": "XEybnwZ7xNYB",
-      "execution_count": 32,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -683,7 +685,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 23
         }
       ]
     },
@@ -704,7 +706,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bfd1a616-dacf-4ad3-dc10-29f9d1a450ad"
+        "outputId": "8bf8a2d8-1bd7-4a79-cd0e-aaac4eaba421"
       },
       "source": [
         "model = MobileNetV2(input_shape = (512, 512, 3), include_top = False, weights = 'imagenet', \n",
@@ -718,14 +720,12 @@
         "model = tf.keras.models.Model(inputs = model.input, outputs = x)"
       ],
       "id": "pe4WsyWLWlqo",
-      "execution_count": 33,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "WARNING:tensorflow:`input_shape` is undefined or non-square, or `rows` is not in [96, 128, 160, 192, 224]. Weights for input shape (224, 224) will be loaded as the default.\n",
-            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/mobilenet_v2/mobilenet_v2_weights_tf_dim_ordering_tf_kernels_1.0_224_no_top.h5\n",
-            "9412608/9406464 [==============================] - 0s 0us/step\n"
+            "WARNING:tensorflow:`input_shape` is undefined or non-square, or `rows` is not in [96, 128, 160, 192, 224]. Weights for input shape (224, 224) will be loaded as the default.\n"
           ],
           "name": "stdout"
         }
@@ -743,7 +743,7 @@
         "checkpoint = ModelCheckpoint(filepath, monitor = 'val_acc', verbose = 1, save_best_only = True, mode = 'max')"
       ],
       "id": "8lu_vmNGXy1B",
-      "execution_count": 35,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -756,7 +756,7 @@
         "callbacks = [checkpoint]"
       ],
       "id": "eB-Mbi3QX3YK",
-      "execution_count": 36,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -770,7 +770,7 @@
         "              metrics = ['acc'])"
       ],
       "id": "INOBVe1vYR-n",
-      "execution_count": 37,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -778,10 +778,9 @@
       "metadata": {
         "id": "ECumd3GBX7wC",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 215
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "37e140bb-e1cf-4ca7-85da-0a4862936f57"
+        "outputId": "dee879fd-af12-4f80-da18-de2d8b8fe203"
       },
       "source": [
         "# treinando a rede neural convolucional\n",
@@ -790,32 +789,27 @@
         "                              callbacks = callbacks, epochs = 3)"
       ],
       "id": "ECumd3GBX7wC",
-      "execution_count": 3,
+      "execution_count": 28,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-3-8f117238cf7b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# treinando a rede neural convolucional\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m history = model.fit_generator(train_generator, steps_per_epoch = 1356 // 32, \n\u001b[0m\u001b[1;32m      3\u001b[0m                               \u001b[0mvalidation_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalid_generator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalidation_steps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m339\u001b[0m \u001b[0;34m//\u001b[0m \u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                               callbacks = callbacks, epochs = 3)\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
-          ]
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/3\n",
+            "42/42 [==============================] - 1291s 31s/step - loss: 0.5559 - acc: 0.7589 - val_loss: 0.5356 - val_acc: 0.7937\n",
+            "\n",
+            "Epoch 00001: val_acc improved from -inf to 0.79375, saving model to /content/drive/MyDrive/experimentos/multilabel/opacity/transferlearning_weights.hdf5\n",
+            "Epoch 2/3\n",
+            "42/42 [==============================] - 1172s 28s/step - loss: 0.4706 - acc: 0.7933 - val_loss: 0.5896 - val_acc: 0.7844\n",
+            "\n",
+            "Epoch 00002: val_acc did not improve from 0.79375\n",
+            "Epoch 3/3\n",
+            "42/42 [==============================] - 1164s 28s/step - loss: 0.3958 - acc: 0.8154 - val_loss: 0.5454 - val_acc: 0.7906\n",
+            "\n",
+            "Epoch 00003: val_acc did not improve from 0.79375\n"
+          ],
+          "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-aR3L7I2NWze"
-      },
-      "source": [
-        "!mv /content/transferlearning_weights.hdf5 /content/drive/MyDrive/experimentos/multilabel/pleura/"
-      ],
-      "id": "-aR3L7I2NWze",
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
