--- a/multilabel-with-lung-segmentation.ipynb
+++ b/multilabel-with-lung-segmentation.ipynb
@@ -23,22 +23,11 @@
       "name": "experimento2_dataset4.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "machine_shape": "hm",
-      "include_colab_link": true
+      "machine_shape": "hm"
     },
     "accelerator": "TPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Alyssonmach/cnn-lung-diseases/blob/main/multilabel-with-lung-segmentation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -901,7 +890,7 @@
         "    count = 0\n",
         "    aux = np.zeros((8,))\n",
         "    for values in predicts:\n",
-        "        if values >= 0.50:\n",
+        "        if values >= 0.40:\n",
         "            aux[count] = 1.\n",
         "        else:\n",
         "            aux[count] = 0.\n",
@@ -910,7 +899,7 @@
         "    count_global += 1"
       ],
       "id": "h6Mh6iQEme8U",
-      "execution_count": 30,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -920,7 +909,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "61f9000f-c5d0-466a-8516-6c26b0f60dcb"
+        "outputId": "8a6c8789-800d-4b21-d284-a99e8d71870f"
       },
       "source": [
         "from sklearn.metrics import precision_score, recall_score, accuracy_score, f1_score, confusion_matrix\n",
@@ -931,62 +920,26 @@
         "print('F1_Score:', f1_score(y.argmax(axis = 1), predict.argmax(axis = 1), average = 'weighted'))"
       ],
       "id": "hGqwPHeVaJDc",
-      "execution_count": 31,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Matriz de Confusão:\n",
-            " [[  3   0   0   0   0   0  16  14]\n",
-            " [  1   1   0   2   1   0  14  11]\n",
-            " [  1   0   0   1   1   2  12  17]\n",
-            " [  8   0   0   4   5   8  41  24]\n",
-            " [  4   0   0   1   1   2  31  31]\n",
-            " [  3   0   0   4   2  18  29  10]\n",
-            " [  8   0   0   2   2   7 119  44]\n",
-            " [  7   0   0   3   5   5  64  65]]\n",
-            "Acurácia: 0.32262996941896027\n",
-            "Precisão 0.30226597728806326\n",
-            "Sensibilidade: 0.32262996941896027\n",
-            "F1_Score: 0.26532358658697824\n"
+            " [[  0   0   0   0   1   0  18  14]\n",
+            " [  0   1   0   2   1   0  17   9]\n",
+            " [  0   0   0   1   1   4  11  17]\n",
+            " [  1   0   0   4   7  11  43  24]\n",
+            " [  1   0   0   2   1   2  36  28]\n",
+            " [  0   0   0   5   2  19  29  11]\n",
+            " [  1   0   0   2   2   8 131  38]\n",
+            " [  1   0   0   3   7   5  72  61]]\n",
+            "Acurácia: 0.3318042813455658\n",
+            "Precisão 0.2897559427645342\n",
+            "Sensibilidade: 0.3318042813455658\n",
+            "F1_Score: 0.2631928585587747\n"
           ],
           "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "l4yjYhe01PFp",
-        "outputId": "530eafd9-d9bc-4000-c076-a011623271fa"
-      },
-      "source": [
-        "train_generator.class_indices"
-      ],
-      "id": "l4yjYhe01PFp",
-      "execution_count": 33,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'Calcification': 0,\n",
-              " 'ILD': 1,\n",
-              " 'Infiltration': 2,\n",
-              " 'Lung Opacity': 3,\n",
-              " 'Nodule/Mass': 4,\n",
-              " 'Pleural effusion': 5,\n",
-              " 'Pleural thickening': 6,\n",
-              " 'Pulmonary fibrosis': 7}"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 33
         }
       ]
     }
