--- a/datasets-preprocessing/nih.ipynb
+++ b/datasets-preprocessing/nih.ipynb
@@ -7,9 +7,9 @@
     "id": "arabic-appraisal"
    },
    "source": [
-    "# Conjunto de Dados 4: *ChestXray-NIH*\n",
+    "# Conjunto de Dados 4: *NIH Dataset*\n",
     "***\n",
-    "> Disponível em: <https://nihcc.app.box.com/v/ChestXray-NIHCC/folder/36938765345>. Acesso em 19 fev. 2021."
+    "* Disponível em: <https://nihcc.app.box.com/v/ChestXray-NIHCC/folder/36938765345>. Acesso em 19 fev. 2021."
    ]
   },
   {
@@ -19,7 +19,7 @@
     "id": "stuffed-chinese"
    },
    "source": [
-    "### Importação dos pacotes necessários"
+    "### Importação dos pacotes "
    ]
   },
   {
@@ -53,48 +53,90 @@
     "id": "toxic-ballot"
    },
    "source": [
-    "### Pré-processamento nos dados"
+    "### Pré-processamento dos dados"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "annual-assault",
-   "metadata": {
-    "id": "flexible-argentina"
-   },
+   "execution_count": null,
+   "id": "b33ed59f",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# baixando dataframe\n",
-    "data_download('https://raw.githubusercontent.com/Alyssonmach/cnn-lung-diseases/main/assets/dataframe-info.csv', 'dataframe-info.csv')"
+    "def organize_csv(file_name):\n",
+    "    '''\n",
+    "    organizando os dados de arquivo csv\n",
+    "\n",
+    "    Args:\n",
+    "        file_name (list) --> lista com os arquivos de imagens\n",
+    "    \n",
+    "    Returns:\n",
+    "        dataframe (pandas) --> dataframe do pandas das imagens com suas rotulações\n",
+    "        lenght_normal (int) --> quantidade de imagens com rotulações normais\n",
+    "        lenght_abnormal (int) --> quantidade de imagens com rotulações anormais\n",
+    "    '''\n",
+    "    \n",
+    "    dataframe = pd.read_csv(file_name)\n",
+    "    dataframe = dataframe.rename(columns = {'Finding Labels': 'finding_labels'})\n",
+    "    dataframe = dataframe.drop(columns = ['Follow-up #', 'Patient Age', 'Patient Gender', 'View Position',\n",
+    "                                          'OriginalImage[Width', 'Height]', 'OriginalImagePixelSpacing[x', 'y]',\n",
+    "                                          'Patient ID']) \n",
+    "  \n",
+    "    dataframe = dataframe[(dataframe.finding_labels == 'No Finding') | (dataframe.finding_labels == 'Atelectasis') |\n",
+    "                          (dataframe.finding_labels == 'Consolidation') | (dataframe.finding_labels == 'Edema') |\n",
+    "                          (dataframe.finding_labels == 'Effusion') | (dataframe.finding_labels == 'Emphysema') |\n",
+    "                          (dataframe.finding_labels == 'Fibrosis') | (dataframe.finding_labels == 'Infiltration') |\n",
+    "                          (dataframe.finding_labels == 'Nodule') | (dataframe.finding_labels == 'Pleural_Thickening') |\n",
+    "                          (dataframe.finding_labels == 'Pneumonia') | (dataframe.finding_labels == 'Pneumothorax')]\n",
+    " \n",
+    "    abnormal = list(dataframe[(dataframe.finding_labels == 'Atelectasis') |\n",
+    "                              (dataframe.finding_labels == 'Consolidation') |\n",
+    "                              (dataframe.finding_labels == 'Edema') |\n",
+    "                              (dataframe.finding_labels == 'Effusion') |\n",
+    "                              (dataframe.finding_labels == 'Emphysema') |\n",
+    "                              (dataframe.finding_labels == 'Fibrosis') |\n",
+    "                              (dataframe.finding_labels == 'Infiltration') |\n",
+    "                              (dataframe.finding_labels == 'Nodule') |\n",
+    "                              (dataframe.finding_labels == 'Pleural_Thickening') |\n",
+    "                              (dataframe.finding_labels == 'Pneumonia') |\n",
+    "                              (dataframe.finding_labels == 'Pneumothorax')].index)\n",
+    "  \n",
+    "    normal = list(dataframe[(dataframe.finding_labels == 'No Finding')].index) \n",
+    "    abnormal = dataframe.loc[abnormal, :]\n",
+    "    abnormal['labels'] = 1\n",
+    "    normal = dataframe.loc[normal, :]\n",
+    "    normal['labels'] = 0\n",
+    "    dataframe = pd.concat([normal, abnormal])\n",
+    "    dataframe = dataframe.sample(frac = 1, axis = 0, random_state = 42).reset_index(drop = True)\n",
+    "\n",
+    "    return dataframe, (len(normal), len(abnormal))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "ambient-samoa",
-   "metadata": {
-    "id": "heard-nightmare"
-   },
+   "execution_count": null,
+   "id": "2c05beb1",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# especificando o diretório com as imagens \n",
-    "IMAGE_DIR = ['../0-datasets/nih/arquivos-descompactados/file01/images/',\n",
-    "             '../0-datasets/nih/arquivos-descompactados/file02/images/',\n",
-    "             '../0-datasets/nih/arquivos-descompactados/file03/images/']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "steady-security",
-   "metadata": {
-    "id": "digital-upper"
-   },
-   "outputs": [],
-   "source": [
-    "# obtendo o dataframe organizando\n",
-    "dataframe, (normal, anormal) = organize_csv('dataframe-info.csv')"
+    "def train_validation_test_split(dataframe):\n",
+    "    '''\n",
+    "    particionando os dados em treinamento, validação e teste\n",
+    "\n",
+    "    Args:\n",
+    "        dataframe (pandas) --> dataset de análise\n",
+    "    \n",
+    "    Returns:\n",
+    "        train_df (pandas) --> dataframe com os dados de treinamento\n",
+    "        validation_df (pandas) --> dataframe com os dados de validação\n",
+    "        test_df (pandas) --> dataframe com os dados de teste\n",
+    "    '''\n",
+    "      \n",
+    "    train_df, test_df = train_test_split(dataframe, test_size = 0.04, stratify = dataframe['labels'], random_state = 42)\n",
+    "    train_df, validation_df = train_test_split(train_df, test_size = 0.02, stratify = train_df['labels'], \n",
+    "                                               random_state = 42)\n",
+    "    \n",
+    "    return train_df, validation_df, test_df "
    ]
   },
   {
@@ -133,7 +175,10 @@
     }
    ],
    "source": [
-    "# visualizando a quantidade de dados disponíveis em cada classe\n",
+    "IMAGE_DIR = ['../0-datasets/nih/arquivos-descompactados/file01/images/',\n",
+    "             '../0-datasets/nih/arquivos-descompactados/file02/images/',\n",
+    "             '../0-datasets/nih/arquivos-descompactados/file03/images/']\n",
+    "dataframe, (normal, anormal) = organize_csv('nih-dataframe.csv')\n",
     "dataframe['finding_labels'].value_counts()"
    ]
   },
@@ -164,22 +209,8 @@
     }
    ],
    "source": [
-    "# visualizando o dataframe\n",
     "print(dataframe.head())\n",
     "print('dataframe shape:', dataframe.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "aquatic-instruction",
-   "metadata": {
-    "id": "regulation-parker"
-   },
-   "outputs": [],
-   "source": [
-    "# particionando o dataset em dados de treino, validação e teste  \n",
-    "train_df, validation_df, test_df = train_validation_test_split(dataframe)"
    ]
   },
   {
@@ -209,7 +240,7 @@
     }
    ],
    "source": [
-    "# visualizando detalhes dos dados de treinamento\n",
+    "train_df, validation_df, test_df = train_validation_test_split(dataframe)\n",
     "print(train_df.head())\n",
     "print('train_df shape:', train_df.shape)"
    ]
@@ -241,7 +272,6 @@
     }
    ],
    "source": [
-    "# visualizando detalhes dos dados de treinamento\n",
     "print(validation_df.head())\n",
     "print('validation_df shape:', validation_df.shape)"
    ]
@@ -273,7 +303,6 @@
     }
    ],
    "source": [
-    "# visualizando detalhes dos dados de teste \n",
     "print(test_df.head())\n",
     "print('validation_df shape:', test_df.shape)"
    ]
@@ -297,19 +326,37 @@
    },
    "outputs": [],
    "source": [
-    "# função para baixar os caminhos de todas as imagens\n",
     "def find_files():\n",
+    "  '''\n",
+    "  função que retorna uma lista de arquivos do conjunto de imagens NIH\n",
     "\n",
-    "  file1 = glob.glob('../0-datasets/nih/arquivos-descompactados/file01/images/*.PNG')\n",
-    "  file2 = glob.glob('../0-datasets/nih/arquivos-descompactados/file02/images/*.png')\n",
-    "  file3 = glob.glob('../0-datasets/nih/arquivos-descompactados/file03/images/*.png')\n",
+    "  Returns:\n",
+    "    files (list) --> lista de arquivos do conjunto de imagens NIH\n",
+    "  '''\n",
     "\n",
-    "  return file1, file2, file3\n",
-    "\n",
-    "file1, file2, file3 = find_files()\n",
-    "\n",
-    "# função para adicionar os caminhos das imagens nos diretórios a partir do arquivo csv\n",
+    "  files = list()\n",
+    "  for index in range(1, 13):\n",
+    "    files.append(glob.glob('../0-datasets/nih/arquivos-descompactados/file' + index + '/images/*.PNG'))\n",
+    "  \n",
+    "  return files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e237c63c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def replace_file(dataframe, new_file, image):\n",
+    "  '''\n",
+    "  renomeia itens do dataset NIH\n",
+    "\n",
+    "  Args:\n",
+    "    dataframe (pandas) --> dataframe do pandas do conjunto de imagens\n",
+    "    new_file (str) --> nome do novo arquivo a ser renomeado no dataframe\n",
+    "    image (str) --> localização da imagem de análise\n",
+    "  '''\n",
     "\n",
     "  index = int(dataframe[dataframe['Image Index'] == image].index.values)\n",
     "  dataframe['Image Index'][index] = new_file\n",
@@ -326,69 +373,25 @@
    },
    "outputs": [],
    "source": [
-    "# organizando o arquivo csv \n",
-    "\n",
-    "result = ''\n",
+    "files, result = find_files(), ''\n",
     "\n",
     "for image in train_df['Image Index']:\n",
-    "  for file_ in file1:\n",
-    "    result = file_.find(image)\n",
-    "    if result > 0:\n",
-    "      replace_file(dataframe = train_df, new_file = file_, image = image)\n",
-    "  for file_ in file2:\n",
-    "    result = file_.find(image)\n",
-    "    if result > 0:\n",
-    "      replace_file(dataframe = train_df, new_file = file_, image = image)\n",
-    "  for file_ in file3:\n",
+    "  for file_ in files:\n",
     "    result = file_.find(image)\n",
     "    if result > 0:\n",
     "      replace_file(dataframe = train_df, new_file = file_, image = image)\n",
     "\n",
     "for image in validation_df['Image Index']:\n",
-    "  for file_ in file1:\n",
+    "  for file_ in files:\n",
     "    result = file_.find(image)\n",
     "    if result > 0:\n",
     "      replace_file(dataframe = validation_df, new_file = file_, image = image)\n",
-    "  for file_ in file2:\n",
-    "    result = file_.find(image)\n",
-    "    if result > 0:\n",
-    "      replace_file(dataframe = validation_df, new_file = file_, image = image)\n",
-    "  for file_ in file3:\n",
-    "    result = file_.find(image)\n",
-    "    if result > 0:\n",
-    "      replace_file(dataframe = validation_df, new_file = file_, image = image)\n",
-    "\n",
+    "  \n",
     "for image in test_df['Image Index']:\n",
-    "  for file_ in file1:\n",
-    "    result = file_.find(image)\n",
-    "    if result > 0:\n",
-    "      replace_file(dataframe = test_df, new_file = file_, image = image)\n",
-    "  for file_ in file2:\n",
-    "    result = file_.find(image)\n",
-    "    if result > 0:\n",
-    "      replace_file(dataframe = test_df, new_file = file_, image = image)\n",
-    "  for file_ in file3:\n",
+    "  for file_ in files:\n",
     "    result = file_.find(image)\n",
     "    if result > 0:\n",
     "      replace_file(dataframe = test_df, new_file = file_, image = image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "3a425af7-1206-4459-8ac0-12bfbfee4e93",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# tornando as classes na coluna 'labels' categórica\n",
-    "train_df.loc[train_df.labels == 1, 'labels'] = 'abnormal'\n",
-    "train_df.loc[train_df.labels == 0, 'labels'] = 'normal'\n",
-    "\n",
-    "validation_df.loc[validation_df.labels == 1, 'labels'] = 'abnormal'\n",
-    "validation_df.loc[validation_df.labels == 0, 'labels'] = 'normal'\n",
-    "\n",
-    "test_df.loc[test_df.labels == 1, 'labels'] = 'abnormal'\n",
-    "test_df.loc[test_df.labels == 0, 'labels'] = 'normal'"
    ]
   },
   {
@@ -480,20 +483,25 @@
     }
    ],
    "source": [
-    "# visualizando o novo formato dos dataframes\n",
+    "train_df.loc[train_df.labels == 1, 'labels'] = 'abnormal'\n",
+    "train_df.loc[train_df.labels == 0, 'labels'] = 'normal'\n",
+    "\n",
+    "validation_df.loc[validation_df.labels == 1, 'labels'] = 'abnormal'\n",
+    "validation_df.loc[validation_df.labels == 0, 'labels'] = 'normal'\n",
+    "\n",
+    "test_df.loc[test_df.labels == 1, 'labels'] = 'abnormal'\n",
+    "test_df.loc[test_df.labels == 0, 'labels'] = 'normal'\n",
+    "\n",
     "train_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "gentle-biography",
-   "metadata": {
-    "id": "04gBKWqghiFv"
-   },
+   "execution_count": null,
+   "id": "8a905271",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# salvando os dataframes manipulados em arquivos csv\n",
     "train_df.to_csv('train_df.csv')\n",
     "validation_df.to_csv('validation_df.csv')\n",
     "test_df.to_csv('test_df.csv')"
@@ -528,7 +536,6 @@
     }
    ],
    "source": [
-    "# visualizando a quantidade de exemplos disponíveis por classe nos dados de treinamento\n",
     "print(train_df['finding_labels'].value_counts())\n",
     "print('\\nQuantidade de exemplos disponíveis: {} imagens'.format(len(train_df)))"
    ]
@@ -562,7 +569,6 @@
     }
    ],
    "source": [
-    "# visualizando a quantidade de exemplos disponíveis por classe nos dados de validação\n",
     "print(validation_df['finding_labels'].value_counts())\n",
     "print('\\nQuantidade de exemplos disponíveis: {} imagens'.format(len(validation_df)))"
    ]
@@ -596,7 +602,6 @@
     }
    ],
    "source": [
-    "# visualizando a quantidade de exemplos disponíveis por classe nos dados de teste\n",
     "print(test_df['finding_labels'].value_counts())\n",
     "print('\\nQuantidade de exemplos disponíveis: {} imagens'.format(len(test_df)))"
    ]
@@ -608,7 +613,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# organizando um dicionário para realizar o balanceamento nos dados das classes\n",
     "class_weights = class_weight.compute_class_weight('balanced', np.unique(train_df['finding_labels']),\n",
     "                                                  train_df['finding_labels'])\n",
     "class_weight = {0: class_weights[0], 1: class_weights[1], 2: class_weights[2], \n",
@@ -650,43 +654,23 @@
     }
    ],
    "source": [
-    "# normalizando as imagens de treinamento e aplicando aumento de dados\n",
     "image_generator = ImageDataGenerator(rescale = 1./255., rotation_range = 10, zoom_range = 0.2)\n",
+    " \n",
+    "train_generator = image_generator.flow_from_dataframe(dataframe = train_df, x_col = 'Image Index',\n",
+    "                                                      y_col = 'finding_labels', batch_size = 256,\n",
+    "                                                      seed = 42, shuffle = True, class_mode = 'categorical',\n",
+    "                                                      color_mode = 'rgb', target_size = (256, 256))\n",
     "\n",
-    "# criando o gerador de imagens de treinamento \n",
-    "train_generator = image_generator.flow_from_dataframe(\n",
-    "                                                      dataframe = train_df,\n",
-    "                                                      x_col = 'Image Index',\n",
-    "                                                      y_col = 'finding_labels',\n",
-    "                                                      batch_size = 256,\n",
-    "                                                      seed = 42,\n",
-    "                                                      shuffle = True,\n",
-    "                                                      class_mode = 'categorical',\n",
-    "                                                      color_mode = 'rgb',\n",
+    "valid_generator = image_generator.flow_from_dataframe(dataframe = validation_df, x_col = 'Image Index',\n",
+    "                                                      y_col = 'finding_labels', batch_size = 128,\n",
+    "                                                      seed = 42, shuffle = True, class_mode = 'categorical',\n",
     "                                                      target_size = (256, 256))\n",
-    "# criando o gerador de imagens de validação \n",
-    "valid_generator = image_generator.flow_from_dataframe(\n",
-    "                                                      dataframe = validation_df,\n",
-    "                                                      x_col = 'Image Index',\n",
-    "                                                      y_col = 'finding_labels',\n",
-    "                                                      batch_size = 128,\n",
-    "                                                      seed = 42,\n",
-    "                                                      shuffle = True,\n",
-    "                                                      class_mode = 'categorical',\n",
-    "                                                      target_size = (256, 256))\n",
-    "\n",
-    "# normalizando as imagens de teste \n",
+    " \n",
     "test_datagen = ImageDataGenerator(rescale = 1./255.)\n",
     "\n",
-    "test_generator = test_datagen.flow_from_dataframe(\n",
-    "                                                  dataframe = test_df, \n",
-    "                                                  x_col = 'Image Index',\n",
-    "                                                  y_col = 'finding_labels',\n",
-    "                                                  batch_size = 128,\n",
-    "                                                  seed = 42,\n",
-    "                                                  shuffle = True,\n",
-    "                                                  class_mode = 'categorical',\n",
-    "                                                  target_size = (256, 256))"
+    "test_generator = test_datagen.flow_from_dataframe(dataframe = test_df, x_col = 'Image Index', y_col = 'finding_labels',\n",
+    "                                                  batch_size = 128, seed = 42, shuffle = True, \n",
+    "                                                  class_mode = 'categorical', target_size = (256, 256))"
    ]
   },
   {
@@ -726,7 +710,6 @@
     }
    ],
    "source": [
-    "# observando os índices das classes encontradas pelo gerador de dados do keras\n",
     "train_generator.class_indices"
    ]
   }
