--- a/datasets-preprocessing/vinbigdata.ipynb
+++ b/datasets-preprocessing/vinbigdata.ipynb
@@ -5,9 +5,9 @@
    "id": "patent-bracelet",
    "metadata": {},
    "source": [
-    "# Conjunto de Dados 3: *VinBigData Image Dataset*\n",
+    "# Conjunto de Dados 3: *VinBigData Dataset*\n",
     "***\n",
-    "> Disponível em: <https://www.kaggle.com/awsaf49/vinbigdata-original-image-dataset>. Acesso em 24 fev. 2021."
+    "* Disponível em: <https://www.kaggle.com/awsaf49/vinbigdata-original-image-dataset>. Acesso em 24 fev. 2021."
    ]
   },
   {
@@ -25,15 +25,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.utils import class_weight\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from keras.preprocessing.image import ImageDataGenerator\n",
-    "from sklearn.utils import class_weight\n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")"
+    "import os"
    ]
   },
   {
@@ -41,20 +38,7 @@
    "id": "cordless-exhibit",
    "metadata": {},
    "source": [
-    "### Pré-processamento nos dados"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "controlling-fraction",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# lendo os dados de um arquivo csv\n",
-    "dataframe = pd.read_csv('../0-datasets/vinbigdata/arquivos-descompactados/vinbigdata/train.csv')\n",
-    "# criando uma coluna com os caminhos relativos as imagens\n",
-    "dataframe['image_path'] = '../0-datasets/vinbigdata/arquivos-descompactados/vinbigdata/train/' + dataframe.image_id + '.jpg'"
+    "### Pré-processamento dos dados"
    ]
   },
   {
@@ -72,6 +56,10 @@
     }
    ],
    "source": [
+    "dataframe = pd.read_csv('../0-datasets/vinbigdata/arquivos-descompactados/vinbigdata/train.csv')\n",
+    "path = '../0-datasets/vinbigdata/arquivos-descompactados/vinbigdata/train/'\n",
+    "dataframe['image_path'] = path + dataframe.image_id + '.jpg'\n",
+    "\n",
     "print('total de imagens disponíveis:', str(len(set(dataframe['image_path']))))"
    ]
   },
@@ -108,22 +96,7 @@
     }
    ],
    "source": [
-    "# visualizando os casos disponíveis\n",
     "dataframe['class_name'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "sufficient-expense",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# removendo os casos não relativos a distúrbios pulmonares\n",
-    "dataframe = dataframe[dataframe.class_name != 'Aortic enlargement']\n",
-    "dataframe = dataframe[dataframe.class_name != 'Cardiomegaly']\n",
-    "dataframe = dataframe[dataframe.class_name != 'Other lesion']\n",
-    "dataframe = dataframe[dataframe.class_name != 'Consolidation']"
    ]
   },
   {
@@ -141,27 +114,15 @@
     }
    ],
    "source": [
-    "# separando os casos rotulados como normais e anormais\n",
+    "dataframe = dataframe[dataframe.class_name != 'Aortic enlargement']\n",
+    "dataframe = dataframe[dataframe.class_name != 'Cardiomegaly']\n",
+    "dataframe = dataframe[dataframe.class_name != 'Other lesion']\n",
+    "dataframe = dataframe[dataframe.class_name != 'Consolidation']\n",
+    "\n",
     "normal_cases = dataframe[(dataframe.class_id == 14) & (dataframe.class_name == 'No finding')]\n",
     "abnormal_cases = dataframe[(dataframe.class_id != 14) & (dataframe.class_name != 'No finding')]\n",
-    "\n",
-    "print('total de dados após a filtração:', str(len(set(normal_cases['image_path'])) + len(set(abnormal_cases['image_path']))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "equipped-thousand",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# removendo as imagens repetidas\n",
-    "normal_data = normal_cases[['image_path', 'class_name']].drop_duplicates(subset = 'image_path', )\n",
-    "abnormal_data = abnormal_cases[['image_path', 'class_name']].drop_duplicates(subset = 'image_path', )\n",
-    "\n",
-    "# criando dataframes especifos com caminhos para as imagens e rótulos\n",
-    "normal_data['target'] = 'normal'\n",
-    "abnormal_data['target'] = 'abnormal'"
+    "lenght_images = len(set(normal_cases['image_path'])) + len(set(abnormal_cases['image_path']))\n",
+    "print('total de dados após a filtração: {}'.format(lenght_images))"
    ]
   },
   {
@@ -180,19 +141,13 @@
     }
    ],
    "source": [
+    "normal_data = normal_cases[['image_path', 'class_name']].drop_duplicates(subset = 'image_path')\n",
+    "abnormal_data = abnormal_cases[['image_path', 'class_name']].drop_duplicates(subset = 'image_path')\n",
+    "normal_data['target'] = 'normal'\n",
+    "abnormal_data['target'] = 'abnormal'\n",
+    "\n",
     "print('quantidade de dados rotulados como normais:', len(normal_data))\n",
     "print('quantidade de dados rotulados como anormais:', len(abnormal_data))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "beneficial-annual",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# removendo 69% dos casos normais para balancear os dados\n",
-    "normal, _ = train_test_split(normal_data, test_size = 0.69, random_state = 42)"
    ]
   },
   {
@@ -211,43 +166,10 @@
     }
    ],
    "source": [
+    "normal, _ = train_test_split(normal_data, test_size = 0.69, random_state = 42)\n",
+    "\n",
     "print('quantidade de dados rotulados como normais:', len(normal))\n",
     "print('quantidade de dados rotulados como anormais:', len(abnormal_data))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "binary-opera",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# concatenando os dataframes de casos normais e anormais\n",
-    "full_data = pd.concat([normal, abnormal_data])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "sorted-malaysia",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# separando os dados de treinamento e de teste\n",
-    "train_df, test_df = train_test_split(full_data, stratify = full_data['target'],\n",
-    "                                     test_size = 0.2, random_state = 42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "single-practice",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# separando os dados de validação dos dados de treinamento\n",
-    "train_df, validation_df = train_test_split(train_df, stratify = train_df['target'],\n",
-    "                                           test_size = 0.2, random_state = 42)"
    ]
   },
   {
@@ -270,7 +192,10 @@
     }
    ],
    "source": [
-    "# visualizando a quantidade de dados\n",
+    "full_data = pd.concat([normal, abnormal_data])\n",
+    "train_df, test_df = train_test_split(full_data, stratify = full_data['target'], test_size = 0.2, random_state = 42)\n",
+    "train_df, validation_df = train_test_split(train_df, stratify = train_df['target'], test_size = 0.2, random_state = 42)\n",
+    "\n",
     "print('quantidade de imagens de treinamento:', len(train_df['image_path']))\n",
     "print('quantidade de rótulos de treinamento:', len(train_df['target']))\n",
     "print('quantidade de imagens de teste:', len(test_df['image_path']))\n",
@@ -281,28 +206,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "99e2d092-91c2-4043-b8a7-2019ca9fbda2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# organizando um dicionário para realizar o balanceamento nos dados das classes\n",
-    "class_weights = class_weight.compute_class_weight('balanced', np.unique(train_df['class_name']),\n",
-    "                                                  train_df['class_name'])\n",
-    "class_weight = {0: class_weights[0], 1: class_weights[1], 2: class_weights[2], \n",
-    "                3: class_weights[3], 4: class_weights[4], 5: class_weights[5],\n",
-    "                6: class_weights[6], 7: class_weights[7], 8: class_weights[8],\n",
-    "                9: class_weights[9], 10: class_weights[10]}"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 24,
    "id": "764b97c8-2b59-4c04-966d-58f388e44f45",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# salvando os dataframes manipulados em arquivos csv\n",
+    "class_weights = class_weight.compute_class_weight('balanced', np.unique(train_df['class_name']), train_df['class_name'])\n",
+    "class_weight = {0: class_weights[0], 1: class_weights[1], 2: class_weights[2], \n",
+    "                3: class_weights[3], 4: class_weights[4], 5: class_weights[5],\n",
+    "                6: class_weights[6], 7: class_weights[7], 8: class_weights[8],\n",
+    "                9: class_weights[9], 10: class_weights[10]}\n",
+    "                \n",
     "train_df.to_csv('train_df.csv')\n",
     "validation_df.to_csv('validation_df.csv')\n",
     "test_df.to_csv('test_df.csv')"
@@ -333,45 +247,24 @@
     }
    ],
    "source": [
-    "# normalizando as imagens de treinamento e aplicando aumento de dados\n",
     "image_generator = ImageDataGenerator(samplewise_center = True, samplewise_std_normalization = True,\n",
     "                                     rotation_range = 10, zoom_range = 0.2)\n",
     "\n",
-    "# criando o gerador de imagens de treinamento \n",
-    "train_generator = image_generator.flow_from_dataframe(\n",
-    "                                                      dataframe = train_df,\n",
-    "                                                      directory = '',\n",
-    "                                                      x_col = 'image_path',\n",
-    "                                                      y_col = 'target',\n",
-    "                                                      batch_size = 32,\n",
-    "                                                      seed = 42,\n",
-    "                                                      shuffle = True,\n",
-    "                                                      class_mode = 'categorical',\n",
+    "train_generator = image_generator.flow_from_dataframe(dataframe = train_df, directory = '', x_col = 'image_path',\n",
+    "                                                      y_col = 'target', batch_size = 32, seed = 42,\n",
+    "                                                      shuffle = True, class_mode = 'categorical',\n",
     "                                                      target_size = (256, 256))\n",
-    "# criando o gerador de imagens de validação \n",
-    "valid_generator = image_generator.flow_from_dataframe(\n",
-    "                                                      dataframe = validation_df,\n",
-    "                                                      directory = '.', \n",
-    "                                                      x_col = 'image_path',\n",
-    "                                                      y_col = 'target',\n",
-    "                                                      batch_size = 32,\n",
-    "                                                      seed = 42,\n",
-    "                                                      shuffle = True,\n",
-    "                                                      class_mode = 'categorical',\n",
+    " \n",
+    "valid_generator = image_generator.flow_from_dataframe(dataframe = validation_df, directory = '.', x_col = 'image_path', \n",
+    "                                                      y_col = 'target', batch_size = 32, seed = 42,\n",
+    "                                                      shuffle = True, class_mode = 'categorical',\n",
     "                                                      target_size = (256, 256))\n",
     "\n",
-    "# normalizando as imagens de teste \n",
     "test_datagen = ImageDataGenerator(samplewise_center = True, samplewise_std_normalization = True)\n",
     "\n",
-    "test_generator = test_datagen.flow_from_dataframe(\n",
-    "                                                  dataframe = test_df, \n",
-    "                                                  directory = '.',\n",
-    "                                                  x_col = 'image_path',\n",
-    "                                                  y_col = 'target',\n",
-    "                                                  batch_size = 32,\n",
-    "                                                  seed = 42,\n",
-    "                                                  shuffle = True,\n",
-    "                                                  class_mode = 'categorical',\n",
+    "test_generator = test_datagen.flow_from_dataframe(dataframe = test_df, directory = '.', x_col = 'image_path',\n",
+    "                                                  y_col = 'target', batch_size = 32, seed = 42,\n",
+    "                                                  shuffle = True, class_mode = 'categorical',\n",
     "                                                  target_size = (256, 256))"
    ]
   },
@@ -393,7 +286,6 @@
     }
    ],
    "source": [
-    "# visualizando os atributos numéricos para cada uma das classes \n",
     "train_generator.class_indices"
    ]
   }
