--- a/datasets-preprocessing/nih.ipynb
+++ b/datasets-preprocessing/nih.ipynb
@@ -34,16 +34,8 @@
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "from sklearn.utils import class_weight\n",
     "import numpy as np\n",
-    "import urllib.request\n",
-    "path = 'https://raw.githubusercontent.com/Alyssonmach/cnn-lung-diseases/main/assets/cxr8_dados.py'\n",
-    "file_path = 'cxr8_dados.py'\n",
-    "urllib.request.urlretrieve(path, file_path)\n",
-    "from cxr8_dados import data_download, organize_csv, download_images, train_validation_test_split \n",
     "import glob\n",
-    "import time\n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")"
+    "import time"
    ]
   },
   {
@@ -175,9 +167,6 @@
     }
    ],
    "source": [
-    "IMAGE_DIR = ['../0-datasets/nih/arquivos-descompactados/file01/images/',\n",
-    "             '../0-datasets/nih/arquivos-descompactados/file02/images/',\n",
-    "             '../0-datasets/nih/arquivos-descompactados/file03/images/']\n",
     "dataframe, (normal, anormal) = organize_csv('nih-dataframe.csv')\n",
     "dataframe['finding_labels'].value_counts()"
    ]
