--- a/datasets/second-paper/chexpert_dataset_multiclass.ipynb
+++ b/datasets/second-paper/chexpert_dataset_multiclass.ipynb
@@ -142,7 +142,7 @@
       "source": [
         "count_findings = list()\n",
         "for finding in classes:\n",
-        "  count = list(chexpert_df[finding].value_counts())[1]\n",
+        "  count = dict(chexpert_df[finding].value_counts())[1.0]\n",
         "  count_findings.append(count)\n",
         "\n",
         "min_classe = min(count_findings)\n",
