correção de erros

--- a/datasets/second-paper/nih_dataset_multiclass.ipynb
+++ b/datasets/second-paper/nih_dataset_multiclass.ipynb
@@ -77,7 +77,7 @@
       },
       "outputs": [],
       "source": [
-        "nih_df = pd.read_csv('/content/Data_Entry_2017_v2020.csv')\n",
+        "nih_df = pd.read_csv('/content/nih_original_csv_file.csv')\n",
         "nih_df = nih_df.drop(['Follow-up #', 'Patient ID', 'Patient Age', \n",
         "                      'View Position', 'OriginalImage[Width', 'Height]', \n",
         "                      'OriginalImagePixelSpacing[x', 'y]'], axis = 1)"
@@ -213,7 +213,7 @@
       "source": [
         "count_findings = list()\n",
         "for finding in classes:\n",
-        "  count = list(nih_df[finding].value_counts())[1]\n",
+        "  count = dict(nih_df[finding].value_counts())[1.0]\n",
         "  count_findings.append(count)\n",
         "\n",
         "plt.figure(figsize = (20, 10))\n",
