--- a/datasets/second-paper/vinbigdata_dataset_multiclass.ipynb
+++ b/datasets/second-paper/vinbigdata_dataset_multiclass.ipynb
@@ -147,7 +147,7 @@
       "source": [
         "count_findings = list()\n",
         "for finding in classes:\n",
-        "  count = list(vinbigdata_df[finding].value_counts())[1]\n",
+        "  count = dict(vinbigdata_df[finding].value_counts())[1.0]\n",
         "  count_findings.append(count)\n",
         "\n",
         "plt.figure(figsize = (20, 10))\n",
