correção de erros

--- a/datasets/second-paper/all_datasets_multiclass.ipynb
+++ b/datasets/second-paper/all_datasets_multiclass.ipynb
@@ -110,7 +110,7 @@
       "source": [
         "count_findings = list()\n",
         "for finding in columns[4:]:\n",
-        "  count = list(all_datasets[finding].value_counts())[1]\n",
+        "  count = dict(all_datasets[finding].value_counts())[1.0]\n",
         "  count_findings.append(count)\n",
         "\n",
         "plt.figure(figsize = (20, 10))\n",
@@ -180,7 +180,7 @@
       "source": [
         "count_findings = list()\n",
         "for finding in columns[4:]:\n",
-        "  count = list(all_datasets_balanced[finding].value_counts())[1]\n",
+        "  count = dict(all_datasets_balanced[finding].value_counts())[1.0]\n",
         "  count_findings.append(count)\n",
         "\n",
         "plt.figure(figsize = (20, 10))\n",
@@ -273,9 +273,9 @@
       "source": [
         "count_train, count_val, count_test = [], [], []\n",
         "for finding in columns[5:]:\n",
-        "  c_train = list(train[finding].value_counts())[1]\n",
-        "  c_val = list(val[finding].value_counts())[1]\n",
-        "  c_test = list(test[finding].value_counts())[1]\n",
+        "  c_train = dict(train[finding].value_counts())[1.0]\n",
+        "  c_val = dict(val[finding].value_counts())[1.0]\n",
+        "  c_test = dict(test[finding].value_counts())[1.0]\n",
         "  count_train.append(c_train), count_val.append(c_val), count_test.append(c_test)\n",
         "\n",
         "plt.figure(figsize = (20, 10))\n",
