correção de erros

--- a/datasets/second-paper/all_datasets_multiclass.ipynb
+++ b/datasets/second-paper/all_datasets_multiclass.ipynb
@@ -279,9 +279,9 @@
         "  count_train.append(c_train), count_val.append(c_val), count_test.append(c_test)\n",
         "\n",
         "plt.figure(figsize = (20, 10))\n",
-        "plt.bar(columns[5:], c_train + c_val + c_test)\n",
-        "plt.bar(columns[5:], c_train + c_val)\n",
-        "plt.bar(columns[5:], c_train)\n",
+        "plt.bar(columns[5:], np.sum((count_train, count_val, count_test), axis = 0))\n",
+        "plt.bar(columns[5:], np.sum((count_train, count_val), axis = 0))\n",
+        "plt.bar(columns[5:], np.sum((count_train), axis = 0))\n",
         "plt.xticks(rotation = 30, size = 15)\n",
         "plt.title('Quantidade Total de Imagens dos Conjunto de Dados', size = 30)\n",
         "plt.ylabel('Imagens', size = 15)"
@@ -295,9 +295,9 @@
       },
       "outputs": [],
       "source": [
-        "train.to_csv(path_or_buf = 'train.csv', columns = columns)\n",
-        "test.to_csv(path_or_buf = 'test.csv', columns = columns)\n",
-        "val.to_csv(path_or_buf = 'val.csv', columns = columns)"
+        "train.to_csv(path_or_buf = 'train_multiclass_abnormalities.csv', columns = columns)\n",
+        "test.to_csv(path_or_buf = 'test_multiclass_abnormalities.csv', columns = columns)\n",
+        "val.to_csv(path_or_buf = 'val_multiclass_abnormalities.csv', columns = columns)"
       ]
     }
   ],
