correção de erros

--- a/experiments/second-paper/abnormality-classification/abnormality_classification_densenet.ipynb
+++ b/experiments/second-paper/abnormality-classification/abnormality_classification_densenet.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNkbf8FnZNZqpt+n6ImdRoz"
+      "authorship_tag": "ABX9TyMR9U/hBbr7HgpyldS0WmKU"
     },
     "kernelspec": {
       "name": "python3",
@@ -40,7 +40,7 @@
         "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
         "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
         "from tensorflow.keras.applications.densenet import DenseNet121 \n",
-        "from sklearn.metrics import roc_curve, auc, roc_auc_score\n",
+        "from sklearn.metrics import roc_curve, auc, roc_auc_score, confusion_matrix\n",
         "from sklearn.model_selection import train_test_split\n",
         "import matplotlib.pyplot as plt\n",
         "import tensorflow as tf\n",
@@ -1087,18 +1087,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from sklearn.metrics import roc_curve, auc, roc_auc_score, accuracy_score, average_precision_score\n",
-        "from sklearn.metrics import precision_score, recall_score, f1_score, confusion_matrix"
-      ],
-      "metadata": {
-        "id": "Py_UgMIqeC5R"
-      },
-      "execution_count": 104,
-      "outputs": []
     },
     {
       "cell_type": "code",
