correção de erros

--- a/experiments/second-paper/abnormality-classification/abnormality_classification_densenet.ipynb
+++ b/experiments/second-paper/abnormality-classification/abnormality_classification_densenet.ipynb
@@ -93,8 +93,8 @@
         "                   (dataset['Atelectasis'] == 1.0) | \n",
         "                   (dataset['Pneumothorax'] == 1.0) | \n",
         "                   (dataset['Effusion'] == 1.0)) & \n",
-        "                  (dataset['Nodule/Mass'] == 0.0) &\n",
-        "                  (dataset['No Finding'] == 0.0)].copy()\n",
+        "                   (dataset['Nodule/Mass'] == 0.0) &\n",
+        "                   (dataset['No Finding'] == 0.0)].copy()\n",
         "\n",
         "dataset.drop(labels = 'Nodule/Mass', axis = 1, inplace = True)\n",
         "dataset.drop(labels = 'No Finding', axis = 1, inplace = True)\n",
@@ -181,7 +181,7 @@
         "f_train, f_val = train_test_split(dataset, test_size = 0.2, random_state = 42, \n",
         "                                  stratify = dataset['labels_ref'])\n",
         "f_val, f_test = train_test_split(f_val, test_size = 0.5, random_state = 42, \n",
-        "                                  stratify = f_val['labels_ref'])\n",
+        "                                 stratify = f_val['labels_ref'])\n",
         "\n",
         "f_train.drop(labels = ['labels_ref'], axis = 1, inplace = True)\n",
         "f_val.drop(labels = ['labels_ref'], axis = 1, inplace = True)\n",
@@ -445,7 +445,7 @@
       "outputs": [],
       "source": [
         "base_model = DenseNet121(include_top = False, weights = 'imagenet', \n",
-        "                             input_shape = (image_size, image_size, 3))\n",
+        "                         input_shape = (image_size, image_size, 3))\n",
         "x = base_model.output\n",
         "x = tf.keras.layers.GlobalAveragePooling2D()(x)\n",
         "output = tf.keras.layers.Dense(len(labels), activation = 'sigmoid')(x)\n",
@@ -1110,11 +1110,18 @@
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.8.10 ('base')",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.8.10"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "efc8d9695810fe3585b36c89909e770e9664819a06c5f0b2cd87a4a705242f97"
+      }
     }
   },
   "nbformat": 4,
