correção de erros

--- a/experiments/second-paper/abnormality-classification/abnormality_classification_inceptionresnet.ipynb
+++ b/experiments/second-paper/abnormality-classification/abnormality_classification_inceptionresnet.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "nR_afdgAoYJ0"
       },
@@ -82,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "kpU-johozJ6C"
       },
@@ -103,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "ohzbDxUBRtoI"
       },
@@ -172,7 +172,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "W_LGuTWiRfcR"
       },
@@ -190,7 +190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -252,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 3,
       "metadata": {
         "id": "B_usy_vR6OoW"
       },
@@ -264,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -317,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -362,7 +362,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "5D8mH-mH8ueb"
       },
@@ -440,7 +440,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "wiMQ0vHvgEBB"
       },
@@ -461,13 +461,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "B6xoHIKpf6qO",
-        "outputId": "99abe17d-1209-4ef4-9b4b-5fff8f0d783a"
+        "outputId": "5f460430-f418-4a66-bb88-60ae664911d9"
       },
       "outputs": [
         {
@@ -477,8 +477,8 @@
             "Bloco input_1 found!\n",
             "Bloco batch_normalization_137 found!\n",
             "Bloco activation_180 found!\n",
-            "Bloco batch_normalization_219 not found!\n",
-            "Bloco conv2d_257 not found!\n"
+            "Bloco batch_normalization_190 found!\n",
+            "Bloco batch_normalization_202 found!\n"
           ]
         }
       ],
@@ -488,7 +488,7 @@
         "  layers_name.append(layer.name)\n",
         "\n",
         "block_names = ['input_1', 'batch_normalization_137', 'activation_180', \n",
-        "               'batch_normalization_219', 'conv2d_257']\n",
+        "               'batch_normalization_190', 'batch_normalization_202']\n",
         "\n",
         "for blocks in block_names:\n",
         "  try:\n",
@@ -931,7 +931,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "03FZSHj8fnMu"
       },
@@ -974,7 +974,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -990,7 +990,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1029,7 +1029,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "v1rE0vQac2_v"
       },
@@ -1057,7 +1057,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1120,7 +1120,7 @@
       "machine_shape": "hm",
       "name": "abnormality_classification_inceptionresnet.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMGnnrUJ4bxi84tefPm66Wn"
+      "authorship_tag": "ABX9TyMAUaxBhFNT2GXBlCc+keJO"
     },
     "gpuClass": "standard",
     "kernelspec": {
