correção de erros

--- a/experiments/second-paper/abnormality_detection.ipynb
+++ b/experiments/second-paper/abnormality_detection.ipynb
@@ -510,7 +510,7 @@
         "id": "YfaBBViyQPIh"
       },
       "source": [
-        "### Organinzando uma Função Utilitária de Callback"
+        "### Organizando uma Função Utilitária de Callback"
       ]
     },
     {
